Test Sandbox Project/src/objects/SurveyQuestionResponse__c.object
<CustomObject>
    <fields>
        <fullName>Periode__c</fullName>
        <formula>IF ( MONTH(DATEVALUE(CreatedDate)) == 1, &apos;January&apos;,
IF ( MONTH(DATEVALUE(CreatedDate)) == 2, &apos;February&apos;,
IF ( MONTH(DATEVALUE(CreatedDate)) == 3, &apos;March&apos;,
IF ( MONTH(DATEVALUE(CreatedDate)) == 4, &apos;April&apos;,
IF ( MONTH(DATEVALUE(CreatedDate)) == 5, &apos;May&apos;,
IF ( MONTH(DATEVALUE(CreatedDate)) == 6, &apos;June&apos;,
IF ( MONTH(DATEVALUE(CreatedDate)) == 7, &apos;July&apos;,
IF ( MONTH(DATEVALUE(CreatedDate)) == 8, &apos;August&apos;,
IF ( MONTH(DATEVALUE(CreatedDate)) == 9, &apos;September&apos;,
IF ( MONTH(DATEVALUE(CreatedDate)) == 10, &apos;October&apos;,
IF ( MONTH(DATEVALUE(CreatedDate)) == 11, &apos;November&apos;,
IF ( MONTH(DATEVALUE(CreatedDate)) == 12, &apos;December&apos;,&apos;&apos;))))))))))))
&amp;&apos; &apos;&amp;TEXT(Year(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Periode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SurveyTaker__c</fullName>
        <label>SurveyTaker</label>
        <referenceTo>SurveyTaker__c</referenceTo>
        <relationshipName>Survey_Question_Answers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <label>Survey Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipName>Survey_Question_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User_Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Question_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week ?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Time_Question_was_Responded_to__c</fullName>
        <defaultValue>1</defaultValue>
        <label># of Time Question was Responded to</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey Question Response</label>
    <nameField>
        <displayFormat>Response-{0000000}</displayFormat>
        <label>Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>